chore: move EndpointGroupsValidationServiceImplTest to JUnit 5